--- a/GUI/App.css
+++ b/GUI/App.css
@@ -129,6 +129,10 @@ body {
   text-shadow: 0 0 5px #00ff00;
   transition: all 0.2s ease;
 }
+.div-hidden,
+button.div-hidden {
+  display: none !important;
+}
 .left-panel button:hover,
 .right-panel button:hover {
   background-color: #600000;
@@ -139,7 +143,8 @@ body {
   transform: translate(3px, 3px) scale(0.98);
   box-shadow: 2px 2px 5px rgba(255, 0, 0, 0.8) inset;
 }
-#result {
+#decrypt-result,
+#encrypt-result {
   font-family: "Courier New", Courier, monospace;
   width: 260px;
   color: #00ff00;
@@ -153,8 +158,13 @@ body {
   font-size: 1.1em;
   text-align: center;
   transition: all 0.3s ease;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  max-height: 60px;
+  overflow-y: auto;
 }
-#decrypt-button {
+#to-encrypt-button,
+#to-decrypt-button {
   font-family: "Courier New", Courier, monospace;
   background-color: #000;
   color: #00ff00;
@@ -162,6 +172,9 @@ body {
   text-shadow: 0 0 5px #00ff00;
   box-shadow: 0 0 10px #00ff00;
   animation: hacker-glitch 1s infinite alternate;
+}
+.div-hidden {
+  display: none;
 }
 .center-panel {
   width: 750px;
@@ -175,6 +188,7 @@ body {
   border-radius: 10px;
   border: 1px solid rgba(0, 255, 0, 0.8);
   animation: hacker-glow 2s infinite alternate;
+  overflow: hidden;
 }
 
 @keyframes hacker-glow {
